--- a/g52cfj-cw1/src/CourseworkBase.vcproj
+++ b/g52cfj-cw1/src/CourseworkBase.vcproj
@@ -170,6 +170,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\Actor.h"
+				>
+			</File>
+			<File
 				RelativePath=".\header.h"
 				>
 			</File>
@@ -221,6 +225,10 @@
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
+			<File
+				RelativePath=".\Actor.cpp"
+				>
+			</File>
 			<File
 				RelativePath=".\Main.cpp"
 				>
