Added a Player class which extends from Actor.

--- a/g52cfj-cw1/src/CourseworkBase.vcproj
+++ b/g52cfj-cw1/src/CourseworkBase.vcproj
@@ -181,6 +181,10 @@
 				RelativePath=".\Main.h"
 				>
 			</File>
+			<File
+				RelativePath=".\Player.h"
+				>
+			</File>
 			<Filter
 				Name="Shared"
 				>
@@ -235,6 +239,10 @@
 			</File>
 			<File
 				RelativePath=".\mainfunction.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Player.cpp"
 				>
 			</File>
 			<Filter
