Added 3 tutorial levels which explain the game, and 3 levels to play on. Also added high score saving to file.

--- a/g52cfj-cw1/src/CourseworkBase.vcproj
+++ b/g52cfj-cw1/src/CourseworkBase.vcproj
@@ -193,6 +193,10 @@
 				RelativePath=".\Player.h"
 				>
 			</File>
+			<File
+				RelativePath=".\TutorialInfected.h"
+				>
+			</File>
 			<Filter
 				Name="Shared"
 				>
@@ -259,6 +263,10 @@
 			</File>
 			<File
 				RelativePath=".\Player.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\TutorialInfected.cpp"
 				>
 			</File>
 			<Filter
